GSLT/src/test/module/bad/BadBindSelf.module
Module BadBindSelf {
  Theory Bad() {
    new()
      .addExports ( Proc; Name; )
      .addTerms (
        PRecv . Proc ::= "for" "(" (Bind Name [0]) "<-" Name ")" "{" Proc "}" ;
      )
  }
}
